fixed the gap in profile section

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -117,6 +117,7 @@
     height: 150px;
     flex-shrink: 0;
     margin: 0 auto;
+    height: fit-content;
   }
   .section__text__p2 {
     font-size: 1.25rem;
